--- a/5-inline-monorepo/buildpack.toml
+++ b/5-inline-monorepo/buildpack.toml
@@ -9,8 +9,24 @@ publish = false
 # the inline buildpack for distribution
 
 [[project.buildpacks]]
-id = "io.buildpacks.node"
-version = "0.0.5"
+id = "io.buildpacks.yolo-nodejs"
 
-[[project.buildpacks]]
-path = "./npm-cnb/"
+[[management.buildpacks]]
+id = "io.buildpacks.yolo-nodejs"
+name = "YOLO Node.js Buildpack"
+version = "0.0.9"
+
+[[management.buildpacks.order]]
+group = [
+   { id = "io.buildpacks.node", version = "0.0.5" },
+   { id = "io.buildpacks.yolo", version = "0.0.7" },
+]
+
+[[management.buildpacks]]
+id = "io.buildpacks.yolo"
+name = "YOLO Buildpack"
+version = "0.0.7"
+path = "./yolo-cnb/"
+
+[[management.buildpacks.stacks]]
+id = "io.buildpacks.stacks.bionic"
