--- a/3-node-separate/buildpack.yarn.toml
+++ b/3-node-separate/buildpack.yarn.toml
@@ -1,8 +1,8 @@
-[buildpack]
+[package]
 id = "io.buildpacks.yarn-nodejs"
 name = "Yarn Node.js Buildpack"
 version = "0.0.9"
-[buildpack.order]
+[package.order]
 group = [
   { path = "node-cnb" },
   { path = "yarn-cnb" },
