--- a/3-node-separate/node-cnb/buildpack.toml
+++ b/3-node-separate/node-cnb/buildpack.toml
@@ -1,15 +1,15 @@
-[buildpack]
+[package]
 id = "io.buildpacks.node"
 name = "Node Engine Buildpack"
 version = "0.0.5"
 
-[[buildpack.stacks]]
+[[package.stacks]]
 id = "io.buildpacks.stacks.bionic"
 
-[[buildpack.stacks]]
+[[package.stacks]]
 id = "org.cloudfoundry.stacks.cflinuxfs3"
 
-[buildpack.metadata.dependencies]
+[package.metadata.dependencies]
 id      = "node"
 name    = "Node.js runtime"
 version = "0.1.1"
