--- a/5-inline-buildpack/yolo-cnb/buildpack.toml
+++ b/5-inline-buildpack/yolo-cnb/buildpack.toml
@@ -1,7 +1,7 @@
-[buildpack]
+[package]
 id = "io.buildpacks.yolo"
 name = "YOLO Buildpack"
 version = "0.0.7"
 
-[[buildpack.stacks]]
+[[package.stacks]]
 id = "io.buildpacks.stacks.bionic"
